--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 </ol><!-- /#posts-list -->
 <p class="paginator">
     Page 1 / 3
-        <a href="https://cthulhusec.github.io/tcmg412group3/page/2/">&raquo;</a>
-        <a href="https://cthulhusec.github.io/tcmg412group3/page/3/">&#8649;</a>
+        <a href="https://cthulhusec.github.io/tcmg412group3/index2.html">&raquo;</a>
+        <a href="https://cthulhusec.github.io/tcmg412group3/index3.html">&#8649;</a>
 </p>
                 </section><!-- /#content -->
         <section id="extras" class="body">
